# RoBoT_mcp

./: .gitignore  ARCHITECTURE.md  Cargo.toml  FEATURE_BRANCH.md  README.md  RoBoT_PROJECT_CONTEXT.md
.cargo/: config.toml
.github/workflows/: build-release.yml
LLModel/: click_to_make_gguf.bat
robot_brain_test/src/: main.rs
src/: app.rs  logging.rs  main.rs
src/bridge/: acp.rs  app.rs  logging.rs  mcp.rs  mcp_client.rs  mod.rs  rmcp.rs  windows_console.rs
src/bridge/tools/: mod.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: config.rs  experience.rs  init.rs  memory.rs  migrate.rs  server.rs  status.rs
src/database/: migrations.rs  queries.rs  sqlite.rs
src/database/migrations/: mod.rs
src/experience/: bus.rs  coordinator.rs  encounter_recorder.rs  event_handler.rs  metrics.rs  observer.rs  scheduler.rs  scorer.rs
src/experience/compression/: compressor.rs  exceptions.rs  pattern.rs
src/experience/events/: types.rs  (+1 more)
src/learning/: candidates.rs  hypothesis.rs  lineage.rs  mod.rs  pipeline.rs  working_memory.rs
src/memory/: mod.rs  permanent.rs  retrieval.rs  types.rs  working.rs
src/planner/: mod.rs  planner.rs  policy.rs
src/skills/: mod.rs  registry.rs
src/tools/: agent.rs  experience.rs  hypothesis.rs  ingestor.rs  knowledge.rs  memory.rs  mod.rs  planner.rs  reflection.rs  search.rs  workflow.rs
src/workflows/: engine.rs  mod.rs
tests/: compressor_tests.rs  exceptions_tests.rs  generator_tests.rs  mod.rs  pattern_tests.rs  permanent_tests.rs  pipeline_tests.rs  query_tests.rs  retrieval_tests.rs  store_tests.rs  working_tests.rs
(+24 files in other folders)
