[package]
name = "robot_brain"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "2", features = ["server", "client", "transport-io", "macros", "transport-child-process"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
walkdir = "2"
zip = "2"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
xz2 = "0.1"
sha2 = "0.10"
lazy_static = "1"
dirs = "5"
rusqlite = { version = "0.32", features = ["load_extension", "bundled"] }
zerocopy = { version = "0.7", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
